--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Husan Club — Nazariy imtihon</title>
-    <meta name="description" content="Husan Club - Avtomobil haydash nazariy imtihoniga tayyorlanishning mukammal tizimi" />
+    <title>Avto maktab — Samandar</title>
+    <meta name="description" content="Samandar Club - Avtomobil haydash nazariy imtihoniga tayyorlanishning mukammal tizimi" />
     <meta name="author" content="Husan Club" />
     
     <link rel="manifest" href="/manifest.json" />
