--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#6366f1" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png" />
 
